# aida

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
_extras/: csv-json.txt  example.sql  links.md  squirrels.csv
_templates/: page.html
analyze/: index.md
api/: index.md
code/: index.md
coding/: index.md
communicate/: index.md
data/: index.md
database/: index.md
db/: index.md
docs/: index.html
docs/analyze/: index.html
docs/api/: index.html
docs/bibliography/: index.html
docs/code/: index.html
docs/coding/: index.html
docs/communicate/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/data/: index.html
docs/database/: index.html
docs/db/: index.html
docs/finale/: index.html
docs/glossary/: index.html
docs/interact/: index.html
docs/intro/: index.html
docs/learn/: index.html
docs/learning/: index.html
docs/license/: index.html
docs/llm/: index.html
docs/manage/: index.html
docs/records/: index.html
docs/visualize/: index.html
docs/writing/: index.html
finale/: index.md
glossary/: index.md
interact/: index.md
intro/: index.md
learn/: index.md
learning/: index.md
llm/: index.md
log/: 2026-04-30-15-29-create-outline.md  2026-05-01-13-05-expand-llm-interact.md  2026-05-01-15-31-use-claude-code.md  2026-05-01-19-31-reformat-lesson-structure.md  2026-05-01-21-07-merge-lessons.md  2026-05-02-14-22-combine-lessons-writing-outline.md  2026-05-02-14-37-underscore-glossary-keys.md  2026-05-02-21-01-draft-learning-lesson.md  2026-05-05-23-06-add-worked-examples.md  2026-05-08-23-01-finale-fatigue-advice.md
manage/: index.md
records/: index.md
visualize/: index.md
writing/: index.md
