[project]
name = "aida"
description = "AI for Data Analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=2.15.0",
    "sqlite-utils>=3.39",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "llm>=0.31",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.mccole]
skips = [
    "**/*~",
    "docs/**",
    "log/**",
    "uv.lock"
]
